--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
     "rules": {
         "react-native/no-unused-styles": 2,
         "react-native/split-platform-components": 2,
-        "react-native/no-color-literals": "warn",
+        "react-native/no-color-literals": "off",
         "react-native/no-raw-text": 2,
         "react-native/no-inline-styles": "off",
         "comma-dangle": [
