--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-anchor-point": "^1.0.1",
+    "react-native-elements": "^3.3.0",
     "react-native-screens": "^2.18.1",
     "react-native-web": "~0.13.12"
   },
